--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -16,7 +16,7 @@
 }
 @media screen and (max-width: 600px) {
     .header__lang-link{
-        font-size: 18x;
+        font-size: 18px;
         line-height: 20px;
     }
 }
