--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,7 +9,7 @@
     align-items: center;
     color: white;
     max-width: 360px;
-    
+    z-index: 1;
 }
 @media screen and (max-width: 600px) {
     .cover__subtitle{
