--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -22,3 +22,8 @@
         margin-bottom: 32px;
     }
 }
+@media screen and (max-width: 600px) {
+    .footer__link:last-child{
+        margin-bottom: 48px;
+    }
+}
