--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,6 +7,7 @@
     line-height: 28px;
     color: white;
     padding-right: 18px;
+    text-decoration: none;
 }
 .header__lang-link:last-child{
     padding-right: 0;
